Added filtraion and pagination of materials